Replaced all \aap instances in publications.bib to A&A so that the journal is rendered properly.

--- a/publications.bib
+++ b/publications.bib
@@ -18,7 +18,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2024A&A...691A.234Z,
        author = {{Zhang}, X. and {Bulbul}, E. and {Malavasi}, N. and {Ghirardini}, V. and {Comparat}, J. and {Kluge}, M. and {Liu}, A. and {Merloni}, A. and {Zhang}, Y. and {Bahar}, Y.~E. and {Artis}, E. and {Sanders}, J.~S. and {Garrel}, C. and {Balzer}, F. and {Br{\"u}ggen}, M. and {Freyberg}, M. and {Gatuzz}, E. and {Grandis}, S. and {Krippendorf}, S. and {Nandra}, K. and {Ponti}, G. and {Ramos-Ceja}, M. and {Predehl}, P. and {Reiprich}, T.~H. and {Veronica}, A. and {Yeung}, M.~C.~H. and {Zelmer}, S.},
         title = "{The SRG/eROSITA all-sky survey: X-ray emission from the warm-hot phase gas in long cosmic filaments}",
-      journal = {\aap},
+      journal = {A&A},
      keywords = {intergalactic medium, large-scale structure of Universe, X-rays: diffuse background, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2024,
         month = nov,
@@ -68,7 +68,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2024A&A...690A.267Z,
        author = {{Zhang}, Yi and {Comparat}, Johan and {Ponti}, Gabriele and {Merloni}, Andrea and {Nandra}, Kirpal and {Haberl}, Frank and {Locatelli}, Nicola and {Zhang}, Xiaoyuan and {Sanders}, Jeremy and {Zheng}, Xueying and {Liu}, Ang and {Popesso}, Paola and {Liu}, Teng and {Truong}, Nhut and {Pillepich}, Annalisa and {Predehl}, Peter and {Salvato}, Mara and {Shreeram}, Soumya and {Yeung}, Michael C.~H. and {Ni}, Qingling},
         title = "{The hot circumgalactic medium in the eROSITA All-Sky Survey: I. X-ray surface brightness profiles}",
-      journal = {\aap},
+      journal = {A&A},
      keywords = {galaxies: general, galaxies: halos, galaxies: statistics, X-rays: galaxies, Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena},
          year = 2024,
         month = oct,
@@ -86,7 +86,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2024A&A...690A.268Z,
        author = {{Zhang}, Yi and {Comparat}, Johan and {Ponti}, Gabriele and {Merloni}, Andrea and {Nandra}, Kirpal and {Haberl}, Frank and {Truong}, Nhut and {Pillepich}, Annalisa and {Locatelli}, Nicola and {Zhang}, Xiaoyuan and {Sanders}, Jeremy and {Zheng}, Xueying and {Liu}, Ang and {Popesso}, Paola and {Liu}, Teng and {Predehl}, Peter and {Salvato}, Mara and {Shreeram}, Soumya and {Yeung}, Michael C.~H.},
         title = "{The hot circumgalactic medium in the eROSITA All-Sky Survey: II. Scaling relations between X-ray luminosity and galaxies' mass}",
-      journal = {\aap},
+      journal = {A&A},
      keywords = {galaxies: general, galaxies: halos, galaxies: statistics, X-rays: galaxies, Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena},
          year = 2024,
         month = oct,
@@ -104,7 +104,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2024A&A...690A.399Y,
        author = {{Yeung}, Michael C.~H. and {Ponti}, Gabriele and {Freyberg}, Michael J. and {Dennerl}, Konrad and {Liu}, Teng and {Locatelli}, Nicola and {Mayer}, Martin G.~F. and {Sanders}, Jeremy S. and {Sasaki}, Manami and {Strong}, Andy and {Zhang}, Yi and {Zheng}, Xueying and {Gatuzz}, Efrain},
         title = "{The SRG/eROSITA diffuse soft X-ray background: I. The local hot bubble in the western Galactic hemisphere}",
-      journal = {\aap},
+      journal = {A&A},
      keywords = {ISM: bubbles, ISM: structure, local insterstellar matter, solar neighborhood, X-rays: diffuse background, X-rays: ISM, Astrophysics - Astrophysics of Galaxies},
          year = 2024,
         month = oct,
@@ -122,7 +122,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2024A&A...689A.328Z,
        author = {{Zheng}, Xueying and {Ponti}, Gabriele and {Locatelli}, Nicola and {Sanders}, Jeremy and {Merloni}, Andrea and {Becker}, Werner and {Comparat}, Johan and {Dennerl}, Konrad and {Freyberg}, Michael and {Maitra}, Chandreyee and {Sasaki}, Manami and {Strong}, Andrew and {Yeung}, Michael C.~H.},
         title = "{eROSITA narrowband maps at the energies of soft X-ray emission lines}",
-      journal = {\aap},
+      journal = {A&A},
      keywords = {Galaxy: general, Galaxy: structure, X-rays: diffuse background, X-rays: general, Astrophysics - Astrophysics of Galaxies},
          year = 2024,
         month = sep,
@@ -194,7 +194,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2024A&A...682A..34M,
        author = {{Merloni}, A. and {Lamer}, G. and {Liu}, T. and {Ramos-Ceja}, M.~E. and {Brunner}, H. and {Bulbul}, E. and {Dennerl}, K. and {Doroshenko}, V. and {Freyberg}, M.~J. and {Friedrich}, S. and {Gatuzz}, E. and {Georgakakis}, A. and {Haberl}, F. and {Igo}, Z. and {Kreykenbohm}, I. and {Liu}, A. and {Maitra}, C. and {Malyali}, A. and {Mayer}, M.~G.~F. and {Nandra}, K. and {Predehl}, P. and {Robrade}, J. and {Salvato}, M. and {Sanders}, J.~S. and {Stewart}, I. and {Tub{\'\i}n-Arenas}, D. and {Weber}, P. and {Wilms}, J. and {Arcodia}, R. and {Artis}, E. and {Aschersleben}, J. and {Avakyan}, A. and {Aydar}, C. and {Bahar}, Y.~E. and {Balzer}, F. and {Becker}, W. and {Berger}, K. and {Boller}, T. and {Bornemann}, W. and {Br{\"u}ggen}, M. and {Brusa}, M. and {Buchner}, J. and {Burwitz}, V. and {Camilloni}, F. and {Clerc}, N. and {Comparat}, J. and {Coutinho}, D. and {Czesla}, S. and {Dannhauer}, S.~M. and {Dauner}, L. and {Dauser}, T. and {Dietl}, J. and {Dolag}, K. and {Dwelly}, T. and {Egg}, K. and {Ehl}, E. and {Freund}, S. and {Friedrich}, P. and {Gaida}, R. and {Garrel}, C. and {Ghirardini}, V. and {Gokus}, A. and {Gr{\"u}nwald}, G. and {Grandis}, S. and {Grotova}, I. and {Gruen}, D. and {Gueguen}, A. and {H{\"a}mmerich}, S. and {Hamaus}, N. and {Hasinger}, G. and {Haubner}, K. and {Homan}, D. and {Ider Chitham}, J. and {Joseph}, W.~M. and {Joyce}, A. and {K{\"o}nig}, O. and {Kaltenbrunner}, D.~M. and {Khokhriakova}, A. and {Kink}, W. and {Kirsch}, C. and {Kluge}, M. and {Knies}, J. and {Krippendorf}, S. and {Krumpe}, M. and {Kurpas}, J. and {Li}, P. and {Liu}, Z. and {Locatelli}, N. and {Lorenz}, M. and {M{\"u}ller}, S. and {Magaudda}, E. and {Mannes}, C. and {McCall}, H. and {Meidinger}, N. and {Michailidis}, M. and {Migkas}, K. and {Mu{\~n}oz-Giraldo}, D. and {Musiimenta}, B. and {Nguyen-Dang}, N.~T. and {Ni}, Q. and {Olechowska}, A. and {Ota}, N. and {Pacaud}, F. and {Pasini}, T. and {Perinati}, E. and {Pires}, A.~M. and {Pommranz}, C. and {Ponti}, G. and {Poppenhaeger}, K. and {P{\"u}hlhofer}, G. and {Rau}, A. and {Reh}, M. and {Reiprich}, T.~H. and {Roster}, W. and {Saeedi}, S. and {Santangelo}, A. and {Sasaki}, M. and {Schmitt}, J. and {Schneider}, P.~C. and {Schrabback}, T. and {Schuster}, N. and {Schwope}, A. and {Seppi}, R. and {Serim}, M.~M. and {Shreeram}, S. and {Sokolova-Lapa}, E. and {Starck}, H. and {Stelzer}, B. and {Stierhof}, J. and {Suleimanov}, V. and {Tenzer}, C. and {Traulsen}, I. and {Tr{\"u}mper}, J. and {Tsuge}, K. and {Urrutia}, T. and {Veronica}, A. and {Waddell}, S.~G.~H. and {Willer}, R. and {Wolf}, J. and {Yeung}, M.~C.~H. and {Zainab}, A. and {Zangrandi}, F. and {Zhang}, X. and {Zhang}, Y. and {Zheng}, X.},
         title = "{The SRG/eROSITA all-sky survey. First X-ray catalogues and data release of the western Galactic hemisphere}",
-      journal = {\aap},
+      journal = {A&A},
      keywords = {catalogs, surveys, X-rays: general, Astrophysics - High Energy Astrophysical Phenomena},
          year = 2024,
         month = feb,
@@ -212,7 +212,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2024A&A...681A..78L,
        author = {{Locatelli}, N. and {Ponti}, G. and {Zheng}, X. and {Merloni}, A. and {Becker}, W. and {Comparat}, J. and {Dennerl}, K. and {Freyberg}, M.~J. and {Sasaki}, M. and {Yeung}, M.~C.~H.},
         title = "{The warm-hot circumgalactic medium of the Milky Way as seen by eROSITA}",
-      journal = {\aap},
+      journal = {A&A},
      keywords = {Galaxy: general, X-rays: diffuse background, Astrophysics - Astrophysics of Galaxies},
          year = 2024,
         month = jan,
@@ -247,7 +247,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2023A&A...676A...3Y,
        author = {{Yeung}, M.~C.~H. and {Freyberg}, M.~J. and {Ponti}, G. and {Dennerl}, K. and {Sasaki}, M. and {Strong}, A.},
         title = "{SRG/eROSITA X-ray shadowing study of giant molecular clouds}",
-      journal = {\aap},
+      journal = {A&A},
      keywords = {X-rays: diffuse background, X-rays: ISM, ISM: clouds, ISM: bubbles, solar wind, Astrophysics - Astrophysics of Galaxies},
          year = 2023,
         month = aug,
@@ -282,7 +282,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2023A&A...674A.195P,
        author = {{Ponti}, G. and {Zheng}, X. and {Locatelli}, N. and {Bianchi}, S. and {Zhang}, Y. and {Anastasopoulou}, K. and {Comparat}, J. and {Dennerl}, K. and {Freyberg}, M. and {Haberl}, F. and {Merloni}, A. and {Reiprich}, T.~H. and {Salvato}, M. and {Sanders}, J. and {Sasaki}, M. and {Strong}, A. and {Yeung}, M.~C.~H.},
         title = "{Abundance and temperature of the outer hot circumgalactic medium. The SRG/eROSITA view of the soft X-ray background in the eFEDS field}",
-      journal = {\aap},
+      journal = {A&A},
      keywords = {X-rays: diffuse background, Galaxy: halo, local insterstellar matter, Galaxy: abundances, ISM: structure, ISM: general, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Astrophysics of Galaxies},
          year = 2023,
         month = jun,
@@ -300,7 +300,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2023A&A...670A..99P,
        author = {{Ponti}, G. and {Sanders}, J.~S. and {Locatelli}, N. and {Zheng}, X. and {Zhang}, Y. and {Yeung}, M. and {Freyberg}, M. and {Dennerl}, K. and {Comparat}, J. and {Merloni}, A. and {Di Teodoro}, E. and {Sasaki}, M. and {Reiprich}, T.~H.},
         title = "{Characterizing the patchy appearance of the circumgalactic medium and the influence of foreground absorption}",
-      journal = {\aap},
+      journal = {A&A},
      keywords = {X-rays: diffuse background, Galaxy: general, local insterstellar matter, solar wind, ISM: bubbles, ISM: structure, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
          year = 2023,
         month = feb,
@@ -318,7 +318,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2023A&A...670A..96L,
        author = {{Liu}, A. and {Bulbul}, E. and {Ramos-Ceja}, M.~E. and {Sanders}, J.~S. and {Ghirardini}, V. and {Bahar}, Y.~E. and {Yeung}, M. and {Gatuzz}, E. and {Freyberg}, M. and {Garrel}, C. and {Zhang}, X. and {Merloni}, A. and {Nandra}, K.},
         title = "{X-ray analysis of JWST's first galaxy cluster lens SMACS J0723.3{\ensuremath{-}}7327}",
-      journal = {\aap},
+      journal = {A&A},
      keywords = {galaxies: clusters: intracluster medium, galaxies: clusters: individual: SMACS J0723.3{\ensuremath{-}}7327, X-rays: galaxies: clusters, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
          year = 2023,
         month = feb,
