Used "academic import" to manually added first authored papers only for testing. Previous ADS list has been removed.

--- a/content/publication/2022-ap-j-927-137-y/cite.bib
+++ b/content/publication/2022-ap-j-927-137-y/cite.bib
@@ -6,7 +6,7 @@
  doi = {10.3847/1538-4357/ac4df5},
  eid = {137},
  eprint = {2203.03974},
- journal = {\apj},
+ journal = {ApJ},
  keywords = {Galaxy spectroscopy, Optical astronomy, Cooling flows, Post-starburst galaxies, Spectral index, Stellar populations, Brightest cluster galaxies, 2171, 1776, 2028, 2176, 1553, 1622, 181, Astrophysics - Astrophysics of Galaxies},
  month = {March},
  number = {2},
@@ -16,3 +16,4 @@
  volume = {927},
  year = {2022}
 }
+
