--- a/content/publication/2023-aa-676-a-3-y/cite.bib
+++ b/content/publication/2023-aa-676-a-3-y/cite.bib
@@ -6,7 +6,7 @@
  doi = {10.1051/0004-6361/202345867},
  eid = {A3},
  eprint = {2306.05858},
- journal = {åp},
+ journal = {A&A},
  keywords = {X-rays: diffuse background, X-rays: ISM, ISM: clouds, ISM: bubbles, solar wind, Astrophysics - Astrophysics of Galaxies},
  month = {August},
  pages = {A3},
@@ -15,3 +15,4 @@
  volume = {676},
  year = {2023}
 }
+
