--- a/content/publication/2024-aa-690-a-399-y/cite.bib
+++ b/content/publication/2024-aa-690-a-399-y/cite.bib
@@ -6,7 +6,7 @@
  doi = {10.1051/0004-6361/202451045},
  eid = {A399},
  eprint = {2410.23345},
- journal = {åp},
+ journal = {A&A},
  keywords = {ISM: bubbles, ISM: structure, local insterstellar matter, solar neighborhood, X-rays: diffuse background, X-rays: ISM, Astrophysics - Astrophysics of Galaxies},
  month = {October},
  pages = {A399},
@@ -15,3 +15,4 @@
  volume = {690},
  year = {2024}
 }
+
