--- a/content/publication/2024-rnaas-8-268-y/cite.bib
+++ b/content/publication/2024-rnaas-8-268-y/cite.bib
@@ -4,7 +4,7 @@
  author = {Yeung, Michael C.~H. and Freyberg, Michael J.},
  doi = {10.3847/2515-5172/ad8923},
  eid = {268},
- journal = {Research Notes of the American Astronomical Society},
+ journal = {RNAAS},
  keywords = {Diffuse x-ray background, Stellar parallax, Interstellar dust extinction, Superbubbles, Hot ionized medium, 384, 1618, 837, 1656, 752},
  month = {October},
  number = {10},
@@ -13,3 +13,4 @@
  volume = {8},
  year = {2024}
 }
+
